--- a/app/src/main/res/layout/fragment_filiihub.xml
+++ b/app/src/main/res/layout/fragment_filiihub.xml
@@ -8,7 +8,7 @@
 
 
         <TextView
-            android:id="@+id/socket_text"
+            android:id="@+id/socketText"
             android:textSize="22sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -19,7 +19,7 @@
 
 
         <ProgressBar
-            android:id="@+id/pb_loading_indicator"
+            android:id="@+id/socketLoadingIndicator"
             android:layout_height="42dp"
             android:layout_width="42dp"
             android:layout_gravity="center"
