--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,11 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navigation_filiihub"
-        android:icon="@drawable/filiikot"
+        android:icon="@drawable/ic_couch"
         android:title="Filiikot"/>
 
     <item
         android:id="@+id/navigation_event"
-        android:icon="@drawable/event"
+        android:icon="@drawable/ic_events"
         android:title="Events" />
 </menu>
