--- a/app/src/main/res/layout/fragment_filiihub.xml
+++ b/app/src/main/res/layout/fragment_filiihub.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<FrameLayout
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/filiikot_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/socketText"
@@ -24,4 +29,4 @@
             android:layout_width="42dp"
             android:layout_gravity="center"
             android:visibility="invisible" />
-</FrameLayout>
+</LinearLayout>
