--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#1a237e</color>
     <color name="colorPrimaryDark">#000051</color>
-    <color name="colorAccent">#ff9800</color>
+    <color name="colorAccent">#b0bec5</color>
     <color name="white">#ffffff</color>
 </resources>
