--- a/app/src/main/res/layout-land/fragment_filiihub.xml
+++ b/app/src/main/res/layout-land/fragment_filiihub.xml
@@ -22,10 +22,11 @@
 
         <TextView
             android:id="@+id/socketText"
-            android:textSize="22sp"
+            android:textColor="#000"
+            android:textSize="25sp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:text=""
             android:layout_weight="5"
             android:layout_margin="10dp"
