--- a/app/src/main/res/layout/fragment_filiihub.xml
+++ b/app/src/main/res/layout/fragment_filiihub.xml
@@ -14,12 +14,13 @@
 
         <TextView
             android:id="@+id/socketText"
-            android:textSize="22sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:padding="16dp"
             android:text=""
+            android:textColor="#000"
+            android:textSize="25sp"
             android:visibility="visible" />
 
 
