--- a/app/src/main/res/layout/fragment_list_events.xml
+++ b/app/src/main/res/layout/fragment_list_events.xml
@@ -4,9 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     tools:context=".EventsListFragment">
 
     <android.support.v7.widget.RecyclerView
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:id="@+id/events_recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
