--- a/app/src/main/res/layout/recyclerfh_list_item.xml
+++ b/app/src/main/res/layout/recyclerfh_list_item.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="50sp"
     android:gravity="end"
+    android:background="@color/colorAccent"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="16dp"
