Design list fix

--- a/app/src/main/res/layout-land/fragment_events.xml
+++ b/app/src/main/res/layout-land/fragment_events.xml
@@ -5,18 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".MainActivity">
+
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
 
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
             >
 
             <!-- TODO 2A. ADD FRAGMENT TO TO LAYOUT FILE -->
@@ -40,6 +42,4 @@
         </LinearLayout>
 
     </RelativeLayout>
-
-
 </android.support.constraint.ConstraintLayout>
