--- a/app/src/main/res/layout-land/fragment_filiihub.xml
+++ b/app/src/main/res/layout-land/fragment_filiihub.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
         android:orientation="horizontal"
-
-        >
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <ImageView
@@ -17,26 +23,25 @@
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:layout_weight="6"
-            />
+            android:layout_weight="6" />
 
         <TextView
             android:id="@+id/socketText"
-            android:textColor="#000"
-            android:textSize="25sp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text=""
-            android:layout_weight="5"
+            android:layout_gravity="center_vertical"
             android:layout_margin="10dp"
+            android:layout_weight="5"
+            android:text=""
+            android:textColor="#000"
+            android:textSize="25sp"
             android:visibility="visible" />
 
 
         <ProgressBar
             android:id="@+id/socketLoadingIndicator"
-            android:layout_height="42dp"
             android:layout_width="42dp"
+            android:layout_height="42dp"
             android:layout_gravity="center"
             android:visibility="invisible" />
     </LinearLayout>
