--- a/app/src/main/res/layout/fragment_filiihub.xml
+++ b/app/src/main/res/layout/fragment_filiihub.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -16,7 +14,7 @@
             android:id="@+id/socketText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
             android:padding="16dp"
             android:text=""
             android:textColor="#000"
