Foreground Service volledig werkend

--- a/app/src/main/res/layout/switch_layout.xml
+++ b/app/src/main/res/layout/switch_layout.xml
@@ -11,5 +11,5 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="10dp"
-        android:text="Notifications "/>
+        android:text="Meldingen "/>
 </RelativeLayout>
