BugFix: make loadingspinner visable in filiihub fragment + add not connected message.

--- a/app/src/main/res/layout-land/fragment_filiihub.xml
+++ b/app/src/main/res/layout-land/fragment_filiihub.xml
@@ -6,7 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/socketLoadingIndicator"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:indeterminateDrawable="@drawable/progress"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout" />
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
@@ -37,12 +54,5 @@
             android:textSize="25sp"
             android:visibility="visible" />
 
-
-        <ProgressBar
-            android:id="@+id/socketLoadingIndicator"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_gravity="center"
-            android:visibility="invisible" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
