--- a/app/src/main/res/layout/fragment_filiihub.xml
+++ b/app/src/main/res/layout/fragment_filiihub.xml
@@ -5,10 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
         <ImageView
             android:id="@+id/filiikot_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="300dp" />
+
+        <ProgressBar
+            android:id="@+id/socketLoadingIndicator"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="center"
+            android:indeterminateDrawable="@drawable/progress"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/socketText"
@@ -21,11 +30,5 @@
             android:textSize="25sp"
             android:visibility="visible" />
 
-
-        <ProgressBar
-            android:id="@+id/socketLoadingIndicator"
-            android:layout_height="42dp"
-            android:layout_width="42dp"
-            android:layout_gravity="center"
-            android:visibility="invisible" />
 </LinearLayout>
+
