--- a/app/src/main/res/layout-land/fragment_filiihub.xml
+++ b/app/src/main/res/layout-land/fragment_filiihub.xml
@@ -41,18 +41,22 @@
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:layout_weight="6" />
-
-        <TextView
-            android:id="@+id/socketText"
+        <ScrollView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_margin="10dp"
             android:layout_weight="5"
-            android:text=""
-            android:textColor="#000"
-            android:textSize="25sp"
-            android:visibility="visible" />
+            >
+            <TextView
+                android:id="@+id/socketText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text=""
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:visibility="visible" />
+            </ScrollView>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
