--- a/app/src/main/res/layout/fragment_filiihub.xml
+++ b/app/src/main/res/layout/fragment_filiihub.xml
@@ -1,34 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/socketLoadingIndicator"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:indeterminateDrawable="@drawable/progress"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/filiikot_image"
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp" />
-
-        <ProgressBar
-            android:id="@+id/socketLoadingIndicator"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_gravity="center"
-            android:indeterminateDrawable="@drawable/progress"
-            android:visibility="invisible" />
-
-        <TextView
-            android:id="@+id/socketText"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="16dp"
-            android:text=""
-            android:textColor="#000"
-            android:textSize="25sp"
-            android:visibility="visible" />
+            android:orientation="vertical">
 
-</LinearLayout>
+
+            <ImageView
+                android:id="@+id/filiikot_image"
+                android:layout_width="match_parent"
+                android:layout_height="300dp" />
+
+            <TextView
+                android:id="@+id/socketText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="16dp"
+                android:text=""
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:visibility="visible" />
+        </LinearLayout>
+    </ScrollView>
+</android.support.constraint.ConstraintLayout>
+
+
+
 
